--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>项目管理</title>
+      <!-- Font Awesome for robot icon -->
+      
     </head>
 
     <body>
